--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" data-translate-meta-description="metaDescriptionContent" content="Download music and video from YouTube videos and playlists in MP3 or MP4 format.">
     <meta name="theme-color" content="#0f172a">
-    <title data-translate-key="pageTitle">YouTube Music Downloader</title>
+    <title data-translate-key="pageTitle">YouTube and SoundCloud Music Downloader</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
