--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <div class="header-controls">
                     <div class="lang-switcher-container">
-                        <label for="languageSelector" class="sr-only" data-translate-key="languageLabel">Language:</label>
+                        <label for="languageSelector" data-translate-key="languageLabel">Language:</label>
                         <select id="languageSelector" title="Select Language">
                             <option value="en">English</option>
                             <option value="ru">Русский</option>
