Adding logo for the site

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <title data-translate-key="pageTitle">YouTube, YouTube Music & SoundCloud Downloader</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='musicjacker.jpg') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body class="text-white min-h-screen flex flex-col items-center p-4 selection:bg-sky-500 selection:text-white bg-mode-night">
