--- a/templates/musicjacker-standalone.html
+++ b/templates/musicjacker-standalone.html
@@ -9,6 +9,7 @@
     <title data-translate-key="pageTitle">YouTube, YouTube Music & SoundCloud Downloader</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/jpeg" href="{{ url_for('static', filename='musicjacker.jpg') }}">
     <style>
 body {
             font-family: 'Inter', sans-serif;
