--- a/templates/index.html
+++ b/templates/index.html
@@ -35,6 +35,10 @@
     </div>
 
     <header class="top-nav-container">
+        <button id="navToggleButton" class="nav-toggle-button" aria-label="Collapse navigation" aria-expanded="true">
+            <span class="icon-up">▲</span>
+            <span class="icon-down">▼</span>
+        </button>
         <div class="fluid-glass-nav">
             <div class="fluid-blob one"></div>
             <div class="fluid-blob two"></div>
