--- a/templates/index.html
+++ b/templates/index.html
@@ -193,7 +193,7 @@
             <h2 data-translate-key="shareTitle">Share Music Jacker</h2>
             <p class="share-desc" data-translate-key="shareDescription">Scan the QR code or use the button below to open Music Jacker on another device.</p>
             <div class="qr-display">
-                <img src="{{ url_for('static', filename='musicjackerqrcode.png') }}" alt="Music Jacker QR code" class="qr-image">
+                <img src="{{ url_for('static', filename='musicjackerqrcode (2).png') }}" alt="Music Jacker QR code" class="qr-image">
             </div>
             <button id="nativeShareButton" class="share-primary-button" data-translate-key="shareCta">Share</button>
             <p class="share-hint" data-translate-key="shareNativeHint">If native sharing is unavailable, we will copy the link for you.</p>
